--- a/docs/90-api/cameraComponent.mdx
+++ b/docs/90-api/cameraComponent.mdx
@@ -7,7 +7,11 @@ id: CameraComponent
 
 ## List of Methods
 
-### Vec3 GetRay(Vec2) {#Vec3-GetRay-Vec2}
+### Vec3 ScreenToWorldRay(Vec2) {#Vec3-ScreenToWorldRay-Vec2}
+
+### Vec2 WorldToScreen(Vec3) {#Vec2-WorldToScreen-Vec3}
+
+### Vec3 WorldToScreen3f(Vec3) {#Vec3-WorldToScreen3f-Vec3}
 
 ## List of Properties
 
