--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -15,9 +15,9 @@ id: Object
 
 ### table GetComponents() {#table-GetComponents}
 
-### bool RemoveComponent(userdata) {#bool-RemoveComponent-userdata}
+### bool RemoveComponent(string) {#bool-RemoveComponent-string}
 
-### userdata RemoveComponent(string) {#userdata-RemoveComponent-string}
+### bool RemoveComponent(userdata) {#bool-RemoveComponent-userdata}
 
 ### userdata GetComponentByType(string) {#userdata-GetComponentByType-string}
 
