--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -13,11 +13,11 @@ id: Scene
 
 ### double GetDebugTime() {#double-GetDebugTime}
 
-### bool Test() {#bool-Test}
-
 ### Object CreateObject() {#Object-CreateObject}
 
 ### Object CloneObject(Object) {#Object-CloneObject-Object}
+
+### Object CloneObject(Object, string) {#Object-CloneObject-Object-string}
 
 ### void DestroyObject(Object) {#void-DestroyObject-Object}
 
@@ -34,6 +34,8 @@ id: Scene
 ### table GetObjectsByTag(string) {#table-GetObjectsByTag-string}
 
 ### Object GetObjectById(int) {#Object-GetObjectById-int}
+
+### Component GetComponentById(int) {#Component-GetComponentById-int}
 
 ### bool IsNameValid(string) {#bool-IsNameValid-string}
 
