--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -70,13 +70,7 @@ end
 
 ### bool AssignScript(string) {#bool-AssignScript-string}
 
-### void SendMessage(string, table) {#void-SendMessage-string-table}
-
-### void SendMessage(string, table, int) {#void-SendMessage-string-table-int}
-
-### void RPC(string, ...) {#void-RPC-string}
-
-### void RPC2(int, string, ...) {#void-RPC2-int-string}
+### void RPC(...) {#void-RPC}
 
 ## List of Properties
 
@@ -84,13 +78,15 @@ end
 
 ### Object object {#Object-object}
 
-### bool isValid {#bool-isValid}
-
-### table instance {#table-instance}
+### string name {#string-name}
 
 ### string file {#string-file}
 
 ### bool syncToClient {#bool-syncToClient}
 
-### string name {#string-name}
+### bool sync {#bool-sync}
+
+### table instance {#table-instance}
+
+### bool isValid {#bool-isValid}
 
