--- a/docs/90-api/scriptInstance.mdx
+++ b/docs/90-api/scriptInstance.mdx
@@ -15,7 +15,9 @@ id: ScriptInstance
 
 ### void Detach() {#void-Detach}
 
-### void RPC(int toClient, string functionName, ... values) {#void-RPC-int-toClient-string-functionName-values}
+### void RPC(string, ...) {#void-RPC-string}
+
+### void RPC(int, string, ...) {#void-RPC-int-string}
 
 ## List of Properties
 
