--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -11,31 +11,17 @@ This class is only available on server
 
 ### table GetClients() {#table-GetClients}
 
-### void SendMessages(int toClientID, table messages) {#void-SendMessages-int-toClientID-table-messages}
-
-### table ReceiveMessages() {#table-ReceiveMessages}
-
 ### int GetScriptsVersion() {#int-GetScriptsVersion}
+
+### void LuaReset() {#void-LuaReset}
 
 ### void ResendScripts() {#void-ResendScripts}
 
-### bool ReloadScripts() {#bool-ReloadScripts}
-
 ### table GetLuaFilesList() {#table-GetLuaFilesList}
 
-### userdata GetVoxelClientIDs() {#userdata-GetVoxelClientIDs}
-
-### table GetVoxelStreamStats(int clientID) {#table-GetVoxelStreamStats-int-clientID}
+### table GetVoxelFilesList() {#table-GetVoxelFilesList}
 
 ### void SaveVoxelData() {#void-SaveVoxelData}
-
-### table GetServerConnectionInfo() {#table-GetServerConnectionInfo}
-
-### table GetConnectionInfos() {#table-GetConnectionInfos}
-
-### table GetNetworkStat() {#table-GetNetworkStat}
-
-### userdata GetNetworkStats() {#userdata-GetNetworkStats}
 
 ### void OnLuaLog() {#void-OnLuaLog}
 
