--- a/docs/90-api/voxelInspectComponent.mdx
+++ b/docs/90-api/voxelInspectComponent.mdx
@@ -7,7 +7,7 @@ id: VoxelInspectComponent
 
 ## List of Methods
 
-### void AddVoxelInfo(float, userdata, string, userdata, bool, int) {#void-AddVoxelInfo-float-userdata-string-userdata-bool-int}
+### void AddVoxelInfo(float, userdata, string, userdata, Mat4, bool, int) {#void-AddVoxelInfo-float-userdata-string-userdata-Mat4-bool-int}
 
 ### void Clear() {#void-Clear}
 
