--- a/docs/90-api/enums/drawingCommandsFlags.mdx
+++ b/docs/90-api/enums/drawingCommandsFlags.mdx
@@ -9,3 +9,7 @@ id: drawingCommandsFlags
 | - | - |
 | BaseVertex |  |
 | BaseInstance |  |
+| BaseVertexBaseInstance |  |
+| MultiBaseVertex |  |
+| MultiBaseInstance |  |
+| MultiBaseVertexBaseInstance |  |
