--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -15,3 +15,9 @@ id: VoxelRender
 
 ### Object object {#Object-object}
 
+### bool sync {#bool-sync}
+
+### bool enabled {#bool-enabled}
+
+### bool selected {#bool-selected}
+
